--- a/FeedbackApp.Client/wwwroot/css/site.css
+++ b/FeedbackApp.Client/wwwroot/css/site.css
@@ -23,7 +23,7 @@ a, .btn-link {
 }
 
 .valid.modified:not([type=checkbox]) {
-    outline: 1px solid #26b050;
+    /*outline: 1px solid #26b050;*/
 }
 
 .invalid {
@@ -62,3 +62,195 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+
+/* ---------------------
+     INDEX
+     
+     - Variables
+     - Standard
+     - Radio button styling(socks)
+     - Button Styling
+  -------------------- */
+
+/*  -----------
+     Variables
+    -----------*/
+:root {
+    --main-color: #004085;
+}
+/*  -----------
+     Standard
+    -----------*/
+html, body {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+.content {
+    padding-top: 1.1rem;
+}
+
+.invalid {
+    outline: 1px solid red;
+}
+
+.main-bg-color {
+    background-color: #004085;
+    color: #ffffff;
+}
+
+.validation-message {
+    color: red;
+}
+
+#blazor-error-ui {
+    background: lightyellow;
+    bottom: 0;
+    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
+    display: none;
+    left: 0;
+    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+}
+
+    #blazor-error-ui .dismiss {
+        cursor: pointer;
+        position: absolute;
+        right: 0.75rem;
+        top: 0.5rem;
+    }
+
+/* -------------------------------
+    Radio button styling(socks)
+    --------------------------------*/
+
+.selector {
+    cursor: pointer;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    z-index: 1;
+}
+
+.FEEBACK01 {
+    /*background-image: url(../img/sentiment_very_dissatisfied_black_24dp.png);*/
+    background-image: url(../img/sm_1.jpg);
+}
+
+.FEEBACK02 {
+    background-image: url(../img/sentiment_dissatisfied_black_24dp.png);
+}
+
+.FEEBACK03 {
+    background-image: url(../img/sentiment_neutral_black_24dp.png);
+}
+
+.FEEBACK04 {
+    background-image: url(../img/sentiment_satisfied_black_24dp.png);
+}
+
+.FEEBACK05 {
+    background-image: url(../img/sentiment_very_satisfied_black_24dp.png);
+}
+
+
+.selector:checked + .FEEBACK01 {
+    /*background-image: url(../img/sentiment_very_dissatisfied_blue_24dp.png);*/
+    background-image: url(../img/sm_2.jpg);
+}
+
+.selector:checked + .FEEBACK02 {
+    background-image: url(../img/sentiment_dissatisfied_blue_24dp.png);
+}
+
+.selector:checked + .FEEBACK03 {
+    background-image: url(../img/sentiment_neutral_blue_24dp.png);
+}
+
+.selector:checked + .FEEBACK04 {
+    background-image: url(../img/sentiment_satisfied_blue_24dp.png);
+}
+
+.selector:checked + .FEEBACK05 {
+    background-image: url(../img/sentiment_very_satisfied_blue_24dp.png);
+}
+
+
+.option-name {
+    color: #808080;
+}
+
+.options {
+    background-size: contain;
+    background-repeat: no-repeat;
+    display: inline-block;
+    position: relative;
+    -webkit-filter: brightness(1.8) grayscale(1) opacity(.7);
+    -moz-filter: brightness(1.8) grayscale(1) opacity(.7);
+    filter: brightness(1.8) grayscale(1) opacity(.7);
+    margin-bottom: 0; /*override label margin bottom*/
+    height: 30px;
+    width: 30px;
+    top: 0.5em; /*pushing down depending on size of fonts*/
+
+    border: dotted 1px var(--main-color);
+    border-radius: 50%
+}
+
+.selector:checked ~ .option-name {
+    color: var(--main-color);
+}
+
+.selector:checked + .FEEBACK01 {
+    /*border: solid 1px green;*/
+    -webkit-filter: none;
+    -moz-filter: none;
+    filter: none;
+    -webkit-animation: selected 1s ease-out;
+    -moz-animation: selected 1s ease-out;
+    animation: selected 1s ease-out;
+}
+
+@-moz-keyframes selected {
+    100% {
+        -moz-transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes selected {
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes selected {
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+.selector:checked + .FEEBACK02 {
+    border: solid 1px red;
+    -webkit-filter: none;
+    -moz-filter: none;
+    filter: none;
+    -webkit-animation: selected 1s ease-in;
+    -moz-animation: selected 1s ease-in;
+    animation: selected 1s ease-in;
+}
+
+/*----------------
+   Button Styling
+  ----------------*/
+.btn:hover {
+    background-color: #007bff;
+    font-size: larger;
+}
+
