--- a/FeedbackApp.Components/_Imports.razor
+++ b/FeedbackApp.Components/_Imports.razor
@@ -1,1 +1,15 @@
-﻿
+﻿@using System.Net.Http
+@using System.Net.Http.Json
+@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.JSInterop
+@using FeedbackApp.Shared.Models
+@using FeedbackApp.Shared.Extensions 
+@*@using Blazor_CustomRadioButton
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Blazor_CustomRadioButton.Main
+@using Blazor_CustomRadioButton.Model
+@using Blazor_CustomRadioButton.Components
+@using Blazor_CustomRadioButton.Extensions*@
