--- a/FeedbackApp.Components/_Imports.razor
+++ b/FeedbackApp.Components/_Imports.razor
@@ -7,9 +7,5 @@
 @using Microsoft.JSInterop
 @using FeedbackApp.Shared.Models
 @using FeedbackApp.Shared.Extensions 
-@*@using Blazor_CustomRadioButton
-@using Microsoft.AspNetCore.Components.WebAssembly.Http
-@using Blazor_CustomRadioButton.Main
-@using Blazor_CustomRadioButton.Model
-@using Blazor_CustomRadioButton.Components
-@using Blazor_CustomRadioButton.Extensions*@
+@using FeedbackApp.Shared.Services 
+@using FeedbackApp.Shared.DTO
