--- a/FeedbackApp.Components/Pages/Shared/FeedbackComponent.razor
+++ b/FeedbackApp.Components/Pages/Shared/FeedbackComponent.razor
@@ -1,4 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components
+@using Microsoft.Extensions.Configuration
+@using Microsoft.Extensions.Options
+
 @using static FeedbackApp.Shared.Models.FeedbackModel
 @inject IFeedbackService _feedbackService
 
