--- a/FeedbackApp.Components/wwwroot/css/app.css
+++ b/FeedbackApp.Components/wwwroot/css/app.css
@@ -1,37 +1,31 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
-/* ---------------------
-     INDEX
-     
-     - Variables
-     - Standard
-     - Radio button styling(socks)
-     - Button Styling
-  -------------------- */
 
-/*  -----------
-     Variables
-    -----------*/
-:root{
-    --main-color: #004085;
-    
-}
-/*  -----------
-     Standard
-    -----------*/
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+a, .btn-link {
+    color: #0366d6;
+}
+
+
+
+.btn-primary {
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 .content {
     padding-top: 1.1rem;
 }
 
+.valid.modified:not([type=checkbox]) {
+    outline: 1px solid #26b050;
+}
+
 .invalid {
     outline: 1px solid red;
-}
-.main-bg-color{
-    background-color: #004085;
-    color:#ffffff;
 }
 
 .validation-message {
@@ -57,122 +51,6 @@ html, body {
         top: 0.5rem;
     }
 
-/* -------------------------------
-    Radio button styling(socks)
-    --------------------------------*/
-
-.selector{
-    cursor:pointer;
-
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-
-    position: absolute;
-    z-index:1;
-}
-
-.FEEBACK01{
-    background-image: url(../img/sentiment_very_dissatisfied_black_24dp.png);
-}
-
-.FEEBACK02 {
-    background-image: url(../img/sentiment_dissatisfied_black_24dp.png);
-}
-
-.FEEBACK03 {
-    background-image: url(../img/sentiment_neutral_black_24dp.png);
-}
-
-.FEEBACK04 {
-    background-image: url(../img/sentiment_satisfied_black_24dp.png);
-}
-
-.FEEBACK05 {
-    background-image: url(../img/sentiment_very_satisfied_black_24dp.png);
-}
-
-
-.selector:checked + .FEEBACK01 {
-    background-image: url(../img/sentiment_very_dissatisfied_blue_24dp.png);
-}
-.selector:checked + .FEEBACK02 {
-    background-image: url(../img/sentiment_dissatisfied_blue_24dp.png);
-}
-.selector:checked + .FEEBACK03 {
-    background-image: url(../img/sentiment_neutral_blue_24dp.png);
-}
-.selector:checked + .FEEBACK04 {
-    background-image: url(../img/sentiment_satisfied_blue_24dp.png);
-}
-.selector:checked + .FEEBACK05 {
-    background-image: url(../img/sentiment_very_satisfied_blue_24dp.png);
-}
-
-
-.option-name {
-    color: #808080;
-}
-
-.options{
-    background-size:contain;
-    background-repeat:no-repeat;
-
-    display:inline-block;
-    position:relative;
-
-    -webkit-filter: brightness(1.8) grayscale(1) opacity(.7);
-    -moz-filter: brightness(1.8) grayscale(1) opacity(.7);
-    filter: brightness(1.8) grayscale(1) opacity(.7);
-
-    margin-bottom:0; /*override label margin bottom*/
-    height:30px;
-    width:30px;
-    top:0.5em; /*pushing down depending on size of fonts*/
-
-    border: dotted 1px var(--main-color);
-
-    border-radius:50%
-}
-
-.selector:checked ~.option-name{
-    color: var(--main-color);
-}
-.selector:checked + .MM01{
-    border:solid 1px green;
-    
-    -webkit-filter: none;
-    -moz-filter: none;
-    filter: none;
-    
-    -webkit-animation:selected 1s ease-out;
-    -moz-animation: selected 1s ease-out;
-    animation:  selected 1s ease-out;
-}
-@-moz-keyframes selected {100% { -moz-transform: rotate(360deg); } }
-@-webkit-keyframes selected  { 100% { -webkit-transform: rotate(360deg); } }
-@keyframes selected { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
-
-.selector:checked + .DB01{
-    border:solid 1px red;
-
-    -webkit-filter: none;
-    -moz-filter: none;
-    filter: none;
-    
-    -webkit-animation:selected 1s ease-in;
-    -moz-animation: selected 1s ease-in;
-    animation:  selected 1s ease-in;
-}
-    
-/*----------------
-   Button Styling
-  ----------------*/
-.btn:hover{
-    background-color: #007bff;
-    font-size: larger;
+.bold-text {
+    font-weight: bolder;
 }
